# webserver-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
src/: main.cpp
src/network/: Socket.cpp  Socket.h  socket.cpp  socket.h
src/protocol/: HttpParser.cpp  HttpParser.h  ParseHttp.cpp  ParseHttp.h  ParserUtils.cpp  ParserUtils.h
src/server/: server.cpp  server.h
